--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
     <div class="row">
       <div class="container bg-light" id="buttonHolder"></div>
     </div>
+    <div class="row">
+      <div class="container fluid" id="gifHolder">
+      </div>
+    </div>
+    <div class="row">
+      <div class="container dark" id="moreButtonHolder">
+      </div>
+    </div>
   </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
