--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Share+Tech&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
-
+  <div class="container align-center text-warning display-4" id="title">
+      <div>Gif-inator</div>
+  </div>
   <div class="container">
-    <div class="row">
-      <div class="form-group">
+    <div class="row fluid">
+      <div class="form-group fluid col-12">
         <label for="search"><i class="fa fa-search" aria-hidden="true"></i></label>
-        <input type="text" class="form-control col-8" name="searchBar" id="searchBar" aria-describedby="helpId"
-          placeholder='Gif Magic Button Maker'>
-        <small id="helpId" class="form-text text-muted">By seaching a topic, you add a button that magically adds
-          amazing gifs to your page!</small>
-        <input name="searchButton" id="searchButton" class="btn btn-primary ml-auto" type="button" value="Add">
+        <input type="text" class="form-control" name="searchBar" id="searchBar" aria-describedby="helpId" placeholder='Gif Magic Button Maker'>
+        <small id="helpId" class="form-text text-muted">By seaching a topic, you add a button that magically adds amazing gifs to your page!</small>
+        <input name="searchButton" id="searchButton" class="btn btn-warning mt-2 ml-5 rounded-0" type="button" value="Add Topic">
       </div>
 
     </div>
     <div class="row">
-      <div class="container bg-light" id="buttonHolder"></div>
+      <div class="container bg-dark rounded" id="buttonHolder"></div>
     </div>
     <div class="row">
       <div class="container fluid" id="gifHolder">
