fixed bugs and added ratings and static gifs

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <div class="container align-center text-warning display-4" id="title">
       <div>Gif-inator</div>
   </div>
-  <div class="container">
-    <div class="row fluid">
-      <div class="form-group fluid col-12">
+  <div class="container fluid col-12">
+    <div class="row">
+      <div class="form-group fluid col-9 mx-auto">
         <label for="search"><i class="fa fa-search" aria-hidden="true"></i></label>
         <input type="text" class="form-control" name="searchBar" id="searchBar" aria-describedby="helpId" placeholder='Gif Magic Button Maker'>
         <small id="helpId" class="form-text text-muted">By seaching a topic, you add a button that magically adds amazing gifs to your page!</small>
@@ -31,7 +31,7 @@
       <div class="container bg-dark rounded" id="buttonHolder"></div>
     </div>
     <div class="row">
-      <div class="container fluid" id="gifHolder">
+      <div class="container fluid text-warning" id="gifHolder">
       </div>
     </div>
     <div class="row">
